--- a/templates/index.html
+++ b/templates/index.html
@@ -4,134 +4,138 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <script src="static/js/Chart.min.js"></script>
 <script src="static/js/utils.js"></script>
+<script src="static/js/jsCode.js"></script>
 <link rel="stylesheet" href="static/css/bootstrap.min.css">
 
 <script>
-	function onChangeMash() {
-		var e = document.getElementById("mash");
-		var mashID = e.options[e.selectedIndex].value;
+	var charts = {};
+    function onChangeMash() {
+        var e = document.getElementById("mash");
+        var mashID = e.options[e.selectedIndex].value;
 
-		var table = document.getElementById("mashTable").getElementsByTagName('tbody')[0];
-		table.innerHTML = '';
+        var table = document.getElementById("mashTable").getElementsByTagName('tbody')[0];
+        table.innerHTML = '';
 
-		var content = "";
-		var newRow;
-		var newCell;
-		{% for i in incidents_by_persons %}
-			if (mashID == {{i.persID}}) {
-				newRow = table.insertRow();
+        var content = "";
+        var newRow;
+        var newCell;
+        {% for i in incidents_by_persons %}
+            if (mashID == {{i.persID}}) {
+                newRow = table.insertRow();
 
-				newCell = document.createElement('td');
-				newCell.innerHTML = "{{i.person}}";
-				newRow.appendChild(newCell);
+                newCell = document.createElement('td');
+                newCell.innerHTML = "{{i.person}}";
+                newRow.appendChild(newCell);
 
-				// newCell = document.createElement('td');
-				// newCell.innerHTML = "{{i.id_sp_nar}}";
-				// newRow.appendChild(newCell);
+                // newCell = document.createElement('td');
+                // newCell.innerHTML = "{{i.id_sp_nar}}";
+                // newRow.appendChild(newCell);
 
-				newCell = document.createElement('td');
-				newCell.innerHTML = "{{i.caption}}";
-				newRow.appendChild(newCell);
+                newCell = document.createElement('td');
+                newCell.innerHTML = "{{i.caption}}";
+                newRow.appendChild(newCell);
 
-				newCell = document.createElement('td');
-				newCell.innerHTML = "{{i._count}}";
-				newRow.appendChild(newCell);
+                newCell = document.createElement('td');
+                newCell.innerHTML = "{{i._count}}";
+                newRow.appendChild(newCell);
 
-				newCell = document.createElement('td');
-				newCell.innerHTML = "{{i.totalCount}}";
-				newRow.appendChild(newCell);
-
-
-				newCell = document.createElement('td');
-				newCell.innerHTML = "{{i.ver}}";
-				newRow.appendChild(newCell);
-
-				newCell = document.createElement('td');
-				newCell.innerHTML = "{{i.risk}}";
-				newRow.appendChild(newCell);
+                newCell = document.createElement('td');
+                newCell.innerHTML = "{{i.totalCount}}";
+                newRow.appendChild(newCell);
 
 
-			}
+                newCell = document.createElement('td');
+                newCell.innerHTML = "{{i.ver}}";
+                newRow.appendChild(newCell);
 
-		{% endfor %}
-	};
+                newCell = document.createElement('td');
+                newCell.innerHTML = "{{i.risk}}";
+                newRow.appendChild(newCell);
 
-	function clickPerson(persID) {
-		var e = document.getElementById("mash");
-		e.value = persID;
-		e.dispatchEvent(new Event('change'));
 
-	};
+            }
 
-	function clickRoad(roadName) {
-		"use strict";
-		var newRow;
-		var newCell;
-		var table = document.getElementById("tableEnterprises").getElementsByTagName('tbody')[0];
-		var roads = [];
-		table.innerHTML = '';
-		{% for i in incidents_by_roads %}
-			if ((roadName === '{{i.CaptionLong}}') && (!roads.includes({{i.EnterpriseID}})) ) {
-				newRow = table.insertRow();
-				newRow.setAttribute('onClick', 'clickEnterprise({{i.RoadID}}, {{i.EnterpriseID}})');
+        {% endfor %}
+    };
 
-				newCell = document.createElement('td');
-				newCell.innerHTML = "{{i.EnterpriseID}}";
-				newRow.appendChild(newCell);
-				roads.push({{i.EnterpriseID}});
-			};
-		{% endfor %}
+    function clickPerson(persID) {
+        var e = document.getElementById("mash");
+        e.value = persID;
+        e.dispatchEvent(new Event('change'));
 
-	};
+    };
 
-	function clickEnterprise(roadID, enterpriseID) {
-		"use strict";
-		var v = [];
-		var l = [];
-		var title = '';
-		{% for incident in incidents_by_roads %}
-			if ( (roadID === {{incident.RoadID}}) && (enterpriseID === {{incident.EnterpriseID}}) ) {
-				l.push('{{incident.Caption}}');
-				v.push({{incident.countIncidentsByRoads}});
-				title = '{{incident.CaptionLong}} ' + '{{incident.EnterpriseID}}';
-			};
-		{% endfor %}
-		drawChart(l.slice(0,10), v.slice(0, 10), title);
-	};
+    function clickRoad(roadName) {
+        "use strict";
+        var newRow;
+        var newCell;
+        var table = document.getElementById("tableEnterprises").getElementsByTagName('tbody')[0];
+        var roads = [];
+        table.innerHTML = '';
+        {% for i in incidents_by_roads %}
+            if ((roadName === '{{i.CaptionLong}}') && (!roads.includes({{i.EnterpriseID}})) ) {
+                newRow = table.insertRow();
+                newRow.setAttribute('onClick', 'clickEnterprise({{i.RoadID}}, {{i.EnterpriseID}})');
 
-	function drawChart(l, v, title) {
-		var color = Chart.helpers.color;
-		var barData = {
-			labels: l
-				
-			,
+                newCell = document.createElement('td');
+                newCell.innerHTML = "{{i.EnterpriseID}}";
+                newRow.appendChild(newCell);
+                roads.push({{i.EnterpriseID}});
+            };
+        {% endfor %}
 
-			datasets: [{
-				backgroundColor: color(window.chartColors.red).alpha(0.5).rgbString(),
-				borderColor: window.chartColors.red,
-				borderWidth: 1,
-				data: v
-			}]
-		};
-		var ctx = document.getElementById('canvasRoads').getContext('2d');
-		if (window.myChart != null) {
-			window.myChart.destroy();
-		};
-		myChart = new Chart(ctx, {
-			type: 'horizontalBar',
-			data: barData,
-			options: {
-				legend: {display: false},
-				title: {
-					display: true,
-					text: title
-				}
-			}
+    };
 
-		});
+    function clickEnterprise(roadID, enterpriseID) {
+        "use strict";
+        var v = [];
+        var l = [];
+        var title = '';
+        {% for incident in incidents_by_roads %}
+            if ( (roadID === {{incident.RoadID}}) && (enterpriseID === {{incident.EnterpriseID}}) ) {
+                l.push('{{incident.Caption}}');
+                v.push({{incident.countIncidentsByRoads}});
+                title = '{{incident.CaptionLong}} ' + '{{incident.EnterpriseID}}';
+            };
+        {% endfor %}
+        drawChart(l.slice(0,10), v.slice(0, 10), title, 'canvasRoads');
+    };
 
-	};
+    function drawChart(l, v, title, canvas) {
+        var labels = [];
+        l.forEach((item, index, array) => {labels.push(formatLabel(`${item}`, 50))});
+        var color = Chart.helpers.color;
+        var barData = {
+            labels: labels
+                
+            ,
 
+            datasets: [{
+                backgroundColor: color(window.chartColors.red).alpha(0.5).rgbString(),
+                borderColor: window.chartColors.red,
+                borderWidth: 1,
+                data: v
+            }]
+        };
+        var ctx = document.getElementById(canvas).getContext('2d');
+        
+        if (window.charts[canvas] != null) {
+            window.charts[canvas].destroy();
+        };
+        charts[canvas] = new Chart(ctx, {
+            type: 'horizontalBar',
+            data: barData,
+            options: {
+                legend: {display: false},
+                title: {
+                    display: true,
+                    text: title
+                }
+            }
+
+        });
+
+    };
 
 	(function() {
   		'use strict';
@@ -147,7 +151,6 @@
 			}, false); });
 		}, false);
 	})();
-
 </script>
 
 
@@ -174,6 +177,7 @@
 										<input id="finish-date" class="form-control needs-validation ml-4" type="date" name="finish_date" placeholder="date" value="{{params.finish_date}}" required>
 									</div>
 									<button class="btn btn-sm btn-primary mt-4" type="submit" name="action" value="make">Сформировать</button>
+									<a class="btn btn-sm btn-info mt-4" href="\seasons" role="button">Сезонная динамика</a>
 								</div>
 							</form>
 						</div>
@@ -189,7 +193,7 @@
 								<thead>
 									<tr>
 										<th>Машинист</th>
-										<th>Количество нарушений</th>
+										<th>Количество видов допускаемых нарушений</th>
 									</tr>
 								</thead>
 								<tbody>
@@ -215,31 +219,7 @@
 						<canvas id="canvas"></canvas>
 					</div>
 					<script>
-						var color = Chart.helpers.color;
-						var barData = {
-							labels: 
-								{{ labels | safe }}
-							,
-
-							datasets: [{
-								backgroundColor: color(window.chartColors.red).alpha(0.5).rgbString(),
-								borderColor: window.chartColors.red,
-								borderWidth: 1,
-								data: {{ values | safe}}
-							}]
-						};
-						window.onload = function() {
-							var ctx = document.getElementById('canvas').getContext('2d');
-							window.myHorizontalBar = new Chart(ctx, {
-								type: 'horizontalBar',
-								data: barData,
-								options: {
-									legend: {display: false}
-								}
-
-							})
-						};
-
+						drawChart({{labels | safe}}, {{values | safe}}, '', 'canvas');
 					</script>
 				</div>
 
@@ -286,11 +266,11 @@
 								</thead>
 								<tbody>
 									{% set roads = [] %}
-									{%for incident in incidents_by_roads%}
+									{%for incident in incidents_by_roads|sort(attribute='RoadID')%}
 										{% set _ = roads.append(incident.CaptionLong) %}
 									{% endfor %}
 
-									{% for road in roads|unique|sort%}
+									{% for road in roads|unique%}
 										<tr onClick="clickRoad('{{road}}')">
 											<td>{{road}}</td>
 										</tr>
@@ -315,7 +295,7 @@
 
 			<div class="col-lg-6">
 				<div class="card-header">
-					<strong>Дирекции</strong>
+					<strong>Код депо</strong>
 				</div>
 				<div class="card-body">
 					<div class="row">
